naver 사이트 소유확인 네번째 트라이

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta content="298db8349e9f27dcb7887707f3e4a1f5c695c185" />
+        <meta name="naver-site-verification" content="298db8349e9f27dcb7887707f3e4a1f5c695c185" />
         <!-- Bootstrap CSS -->
         <link
             rel="stylesheet"
