--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-607548cdb05bf493"></script>
-
+        <link rel="canonical" href="https://firstfeel.ga/index.html">
     </head>
     <body>
         <div class="container borderclass mt-5 mb-5">
