head tag update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <title>첫인상 테스트</title>
         <meta name="title" content="첫인상 테스트">
         <meta name="subject" content="얼굴로 보는 인공지능 첫인상 테스트, 나는 어떤 첫인상을 가지고 있을까요?">
-        <meta name="keywords" content="첫인상 테스트, 인공지능 첫인상 테스트, 첫인상, 인상, 첫느낌, 소개팅 첫인상, 소개팅, 면접 첫인상, 면접, AI 얼굴상, AI첫인상">
+        <meta name="keywords" content="첫인상 테스트, 인공지능 첫인상 테스트, 첫인상, 인상, 첫느낌, 소개팅 첫인상, 소개팅, 면접 첫인상, 면접, AI 얼굴상, AI첫인상, firstfeel, firstfeel.ga">
         <meta name="author" content="SD">
         <meta property="og:url" content="https://firstfeel.ga" />
         <meta property="og:type" content="website" />     
