--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </nav>
 
             <section class="section">
-                <h1 class="title">인공지능 첫인상 테스트(남자)</h1>
+                <h1 class="title">인공지능 첫인상 테스트<br />(남자)</h1>
                 <h2 class="subtitle">첫인상이 그 날의 (***)을 결정한다.</h2>
                 <h3 class="subtitle">
                     (면접, 소개팅, 인맥, ...)
@@ -305,7 +305,7 @@
     </body>
     <footer class="bg-dark mt-5 p-5 text-center" style="color: #ffffff;">
         Copyright &copy; 2021 (SD) All right reserved. <br />
-        e-mail : ehddnjs403@naver.com
+        e-mail : ehddnjs403@naver.com <br />
         
         현재는 남자 버전 밖에 없습니다. 여자 버전은 현재 개발중입니다. 곧 업데이트 하겠습니다. 감사합니다.
     </footer>
