--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-607548cdb05bf493"></script>
         <link rel="canonical" href="https://firstfeel.ga" />
         <title>첫인상 테스트</title>
-        <meta name="title" content="첫인상 테스트">
+        <meta name="title" content="인공지능 | 첫인상 테스트 : 나를 바라보는 첫인상 사진으로 알아보아요!">
         <meta name="subject" content="얼굴로 보는 인공지능 첫인상 테스트, 나는 어떤 첫인상을 가지고 있을까요?">
         <meta name="keywords" content="첫인상 테스트, 인공지능 첫인상 테스트, 첫인상, 인상, 첫느낌, 소개팅 첫인상, 소개팅, 면접 첫인상, 면접, AI 얼굴상, AI첫인상, firstfeel, firstfeel.ga">
         <meta name="author" content="SD">
         <meta property="og:url" content="https://firstfeel.ga" />
         <meta property="og:type" content="website" />     
-        <meta property="og:title" content="첫인상 테스트" />
-        <meta property="og:description" content="얼굴로 보는 인공지능 첫인상 테스트, 나를 바라보는 첫인상 시선을 알아보세요!" />
-        <meta name="description" content="얼굴로 보는 인공지능 첫인상 테스트, 나를 바라보는 첫인상 시선을 알아보세요! ">      
+        <meta property="og:title" content="인공지능 | 첫인상 테스트 : 나를 바라보는 첫인상 사진으로 알아보아요!" />
+        <meta property="og:description" content="얼굴로 보는 인공지능 첫인상 테스트, 나를 바라보는 첫인상 시선을 알아보세요! 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능이 보는 나의 동물상 테스트 한번 해보세요!" />
+        <meta name="description" content="얼굴로 보는 인공지능 첫인상 테스트, 나를 바라보는 첫인상 시선을 알아보세요! 회원가입도 필요없이 화면에서 바로 확인해보세요! 사진 데이터는 그 어디에도 전송되지 않습니다. 인공지능이 보는 나의 동물상 테스트 한번 해보세요!">      
         
         
         <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
