body tag text update

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </nav>
 
             <section class="section">
-                <h1 class="title">인공지능 첫인상 테스트<br />(남자)</h1>
+                <h1 class="title">첫인상 테스트 (남자)</h1>
                 <h2 class="subtitle">첫인상이 그 날의 (***)을 결정한다.</h2>
                 <h3 class="subtitle">
                     (면접, 소개팅, 인맥, ...)
