--- a/index.html
+++ b/index.html
@@ -128,13 +128,8 @@
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </div>
-        <div class="ad-banner2">
-            <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-2W41VHlDbWSqLHm8" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-        </div>
+        <div id="disqus_thread"></div>
+
         <script>
             /**
              *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -315,13 +310,6 @@
                 }
             }
         </script>
-        <div class="ad-banner3">
-            <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-ySLgmRt6Ka3JMX1g" 
- data-ad-width   = "320" 
- data-ad-height  = "100"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-        </div>
     </body>
     <footer class="bg-dark mt-5 p-5 text-center" style="color: #ffffff;">
         Copyright &copy; 2021 (SD) All right reserved. <br />
