--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
  data-ad-height  = "100"></ins> 
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </div>
+        <div class="ad-banner2">
+            <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-2W41VHlDbWSqLHm8" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        </div>
         <div id="disqus_thread"></div>
 
         <script>
