ad insert update3

--- a/index.html
+++ b/index.html
@@ -136,7 +136,13 @@
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
         </div>
         <div id="disqus_thread"></div>
-
+        <div class="ad-banner3">
+            <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-ySLgmRt6Ka3JMX1g" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        </div>
         <script>
             /**
              *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
