여자버전 업데이트 test3

--- a/index.html
+++ b/index.html
@@ -77,13 +77,16 @@
                     여자
                 </p>
                 <div>
-                    <input type="checkbox" id="genter">
+                    <input type="checkbox" id="gender">
                     <label for="genter">
                         <span class="knob">
                             <i></i>
                         </span>
                     </label>
                 </div>
+                <p class="d-flex align-items-center pl-3">
+                    남자
+                </p>
             </section>
             <script
                 class="jsbin"
