--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </p>
                 <div>
                     <input type="checkbox" id="gender">
-                    <label for="genter">
+                    <label for="gender">
                         <span class="knob">
                             <i></i>
                         </span>
