--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
         </script>
 
         <script type="text/javascript">
+            let URL;
             const urlMale = 'https://teachablemachine.withgoogle.com/models/jR1mTyuws/';
             const urlFemale = "https://teachablemachine.withgoogle.com/models/SOy-wAH42/";
             let model, webcam, labelContainer, maxPredictions;
