여자버전 업데이트 test 6

--- a/index.html
+++ b/index.html
@@ -365,14 +365,19 @@
                             break;
                         case 'Friendly' :
                             labelTitle = '친근형';
+                            break;
                         case 'Prototype' :
                             labelTitle = '도도형';
+                            break;
                         case 'Active' :
                             labelTitle = '활동형';
+                            break;
                         case 'Passion' :
                             labelTitle = '열정형';
+                            break;
                         case 'Reality' :
                             labelTitle = '현실형';
+                            break;
                         default:
                             labelTitle = '알수없음';
                     }
