--- a/index.html
+++ b/index.html
@@ -306,23 +306,23 @@
                     {
                         case "Friendly" :
                             resultTitle = "친근형"
-                            resultExplain = ""
+                            resultExplain = "누구나 쉽게 다가설 수 있는 친근한 인상을 풍깁니다. 활발하며, 친화력이 좋은 성격을 가지고 있습니다. 사람들과 쉽게 친해지며 사람들 말에 리액션을 잘해줍니다. 본인을 잘 꾸미는 성향입니다. 멋있지 않은 건 허용을 못한다고 생각합니다. 폼생폼사 스타일 ~ 반대로 보면 인내력이 부족하며 일을 크게 벌려놓고 쉽게 그만두거나 안한 적이 많습니다. 고집이 세고 경쟁의식이 없으며 내가 하고싶은건 무조건 해야하는 성격 입니다. 일을 시작하는 데에서 큰 만족을 얻습니다. 경제적 개념이 없어서 돈모으기에 애를 먹고 감정기복이 심합니다. 그게 얼굴에 다 드러날 정도로 표정관리 또한 잘 못합니다. 마지막으로 풍부한 감수성 때문에 좀만 슬픈 걸 봐도 눈물을 흘리네요."
                             break;
                         case "Prototype" :
                             resultTitle = "도도형"
-                            resultExplain = ""
+                            resultExplain = "전체 유형 중 가장 독립적이고 단호하다. 겁나 똥고집. 지나치게 확신하고 양보 절대 안하는 스타일! 하지만 겉은 강해보이지만 속은 쿠쿠다스.. 이 유형은 남들 시선은 신경쓰지 않네요. 착실하고 계획을 잘 지킵니다. 하지만 다른 사람들이 보이게는 이기적이며, 다른 사람을 깔보는 겅향으로 비칠 수 있어요. 사람 성격에 따라 다르게 행동을 하며 특히 꼰대를 혐호하네요. 선 넘는 사람을 정말 싫어하며. '이 사람이 아니다' 싶으면 바로 끊어 낼 정도로 강단이 있습니다. 카톡, SNS, 전화, 문자 모두 귀찮아 합니다. 그래서 인지 본인 속마음은 절대 말하지 않아서 인간관계 관리에 애를 먹는 성향 입니다. 이러한 성향의 여자는 한번 꽂힌거에는 엄청 푹 빠지고 집착한다고 합니다. 특히 물건에 과도한 집착을 보입니다."
                             break;
                         case "Active" :
                             resultTitle = "활동형"
-                            resultExplain = ""
+                            resultExplain = "외향적이고 혼자 있는 생활보다 다른 사람과 어울러져 생활 하는 것을 즐깁니다. 쾌락주의자! 분위기를 잘 이끌며 리더쉽경향도 보입니다. 자기에 대한 믿음이 굳건하며 스트레스를 잘 받지 않습니다. 때문에 공감능력이 떨어지는 부분도 보이네요. 유흥과 쾌락을 너무 좋아하다보면 할 일을 최대한 미루면서 까지 유흥과 쾌락에 과도 하게 빠지게 됩니다. 나아가 위험이 따른다 하더라도 쾌락과 재미를 우선시 하게 될 수도 있다네요. 마치 내일은 없다. 내가 제일 최고다. 태어나서 사는거다. 라는 마음가짐을 갖게 될 수도 있습니다. 인간 관계를 보면 내 사람에게는 정말 잘해주고 다 퍼주려고 하는 성향입니다. 마음속 감정이 얼굴에 다 드러나서 숨기는건 힘들어 하는 타입이네요. 지는걸 싫어하고 무조건 이겨야하는 성향도 있네요."
                             break;
                         case "Passion" :
                             resultTitle = "열정형"
-                            resultExplain = ""
+                            resultExplain = "이상적이고 따듯한 감성을 축적하고자 하는 사람들입니다. 신비롭고 배려심이 깊습니다. 공감능력이 뛰어나고 감수성이 풍부합니다. 또한 창조적이며 예술적인 아이디어를 잘 생각해 내기도 합니다. 반대로 우울한 생각, 잡생각이 많습니다. 특히 망상. 일을 여기저기 벌려놓는데 수습은 하지 못합니다. 자칫 한국에선 사회부적응자로 보일 확률이 높겠네요. 남 눈치를 많이 봅니다. 남에게 상처주는 걸 싫어해서 자기가 오히려 상처를 받고, 거절 당하는 것이 두려워 먼저 철벽을 칩니다. 본인 성격을 자책함과 동시에 본인 자신을 사랑합니다. 겉으로는 수줍어 보이지만 막상 관심 받으면 기분이 좋아 집니다. 누군가 자신의 신념에 대해서 뭐라하는걸 굉장이 싫어합니다.혼자 있는 시간이 좋긴 하지만 철저하게 혼자가 되기 싫어하는 타입입니다. 한 두명의 친구와 노는 것을 좋아하네요. "
                             break;
                         case "Reality" :
                             resultTitle = "현실형"
-                            resultExplain = ""
+                            resultExplain = "리더쉽이 있습니다. 호불호가 확실합니다. 고집이 있습니다. 할말은 무조건 해야 합니다. 논리적이고 분석적입니다. 뭐든지 확실히 해야 하는 성격 입니다. 무리에서 리더 역할을 하는 편입니다. 주로 공감보다는 솔루션을 제공해주는 성향입니다. 다만 창의력, 아이디어가 부족합니다. 직설적으로 말을 하는데 언어표현이 좀 강해서 상대방에게 오해를 살 수 있을 정도의 카리스마를 보이네요. 때문인지 다른 성향들의 비해서 주변인들의 공감 보다는 의지가 많이 되는 유형입니다."
                             break;
                         default:
                         resultTitle = '알수없음';
